2002-08-23  Stephane Demurget  <demurgets@free.fr>

	* src/Makefile.am: readded back an_*_view.[ch] because they are still
	driving me nuts but they need to be ported, heh ?

	* an_file_view.c: gnome 2 port, almost finished after 3 hours of somewhat
	hard work, but 01:46am is late to work, so I'm currently falling (mwahhh)
	asle... (bang)

2002-08-22  Stephane Demurget  <demurgets@free.fr>

	* src/an_file_view.c:
	* src/project_dbase.h: s/GtkTreePath/GtkTreeIter/.

2002-08-21  Stephane Demurget  <demurgets@free.fr>

	* src/anjuta_info.c:
	* src/utilities.h: gnome 2 port, featuring a total rewrite.

2002-08-20  Stephane Demurget  <demurgets@free.fr>

	* src/Makefile.am: removed an_*_view.[ch] because they're driving me
	nuts ATM.
       
	* src/an_file_view.c:
	* src/aneditor.cxx:
	* src/anjuta_cbs.c:
	* src/compiler_options.h:
	* src/messagebox.c:
	* src/messagebox.h:
	* src/pixmaps.h:
	* src/project_dbase.h:
	* src/resources.h: gnome 2 port.

2002-08-14  Stephane Demurget  <demurgets@free.fr>

	Added missing keywords reported by Lucca Bellonda <lbell@tsc4.com>.

	* data/properties/sql.properties: added the DATETIME data type.

	* data/properties/html.properties: added the foreach php keyword.

2002-08-08  Stephane Demurget  <demurgets@free.fr>

	* widgets/Makefile.am: removed blank line after the last backslash
	for avoiding a warning from automake.

	* configure.in:
	* src/Makefile.am: added the ORBit-2 dep.

2002-08-08  Stephane Demurget  <demurgets@free.fr>

	* AUTHORS: added Biswa, because I wonder why noone already have
	written his name in the Anjuta's hall of fame :)

2002-08-01  Naba Kumar <kh_naba@users.sourceforge.net>

	* widgets/Makefile.am, widgets/gnomefilelist.[c,h], widgets/gnomedirlist.[c,h],
	widgets/e-shell-about-box.c: Made to compile for gnome2.
	
2002-07-31  Naba Kumar <kh_naba@users.sourceforge.net>

	* scintilla/PlatGTK.cxx, scintilla/Scintilla.cxx,
	scintilla/include/ScintillaWidget.h: Made to compile for gtk2.
	