@@ -1,11 +1,19 @@
+2002-08-26  Stephane Demurget  <demurgets@free.fr>
+
+	* src/an_file_view.c: finished gnome 2 port.
+	(on_file_view_row_expanded), (on_file_view_row_collapsed): change the
+	directory pixmap depending on the event.
+
+	* src/project_dbase.h: s/GtkTreeIter/GtkTreeRowReference/.
+	(project_file_data_new): use a GtkTreePath.
+
 2002-08-23  Stephane Demurget  <demurgets@free.fr>
 
 	* src/Makefile.am: readded back an_*_view.[ch] because they are still
 	driving me nuts but they need to be ported, heh ?
 
-	* an_file_view.c: gnome 2 port, almost finished after 3 hours of somewhat
-	hard work, but 01:46am is late to work, so I'm currently falling (mwahhh)
-	asle... (bang)
+	* src/an_file_view.c: gnome 2 port, almost finished after some hard
+	work since it's quite a total rewrite again.
 
 2002-08-22  Stephane Demurget  <demurgets@free.fr>
 
